--- a/src/web/public_html/index.html
+++ b/src/web/public_html/index.html
@@ -452,7 +452,18 @@ Play SBSFortress now, a Free Multiplayer Online HTML5 Game. Play with or meet ne
         <textarea id="themeFull"></textarea>
     </div>
     <div id="dialogCreateRoom" class="AnimEnterScaleIn NoSelect">
-        <input type="text" id="createRoomTitle" value="Hello World" maxlength="30">
+        <div class="s_Header">
+            <h2>Create Room</h2>
+        </div>
+        <div>
+            <div className="s_Title">
+                Name
+            </div>
+            <div>
+                <input type="text" id="createRoomTitle" value="Hello World" maxlength="30">
+            </div>
+        </div>
+        
         <div id="CreateRoomPrivateCheckbox" class="checkboxOff opacity_button"></div>
         <div id="CreateRoomPassword" class="hide">
             <input type="text" id="createRoomPasswordInput" value="" maxlength="10">
