--- a/src/web/public_html/index.html
+++ b/src/web/public_html/index.html
@@ -468,12 +468,29 @@ Play SBSFortress now, a Free Multiplayer Online HTML5 Game. Play with or meet ne
         <div id="CreateRoomPassword" class="hide">
             <input type="text" id="createRoomPasswordInput" value="" maxlength="10">
         </div>
-        <div id="CreateRoomNumPlayersPrev" class="buttonPrev opacity_button"></div>
-        <div id="CreateRoomNumPlayersNext" class="buttonNext opacity_button"></div>
-        <div id="CreateRoomPlayers" class="players4vB"></div>
-        <div id="CreateRoomModePrev" class="buttonPrev opacity_button"></div>
-        <div id="CreateRoomModeNext" class="buttonNext opacity_button"></div>
-        <div id="CreateRoomMode" class="gameModeBoss blackShadow2"></div>
+        
+        <section class="s_Room">
+            <div class="s_Room--Iz">
+                Number of players
+            </div>
+            <div>
+                <div id="CreateRoomNumPlayersPrev" class="buttonPrev opacity_button"></div>
+                <div id="CreateRoomNumPlayersNext" class="buttonNext opacity_button"></div>
+                <div id="CreateRoomPlayers" class="players4vB"></div>
+            </div>
+        </section>
+
+        <section>
+            <div class="s_Room--Iz">
+               Game Mode
+            </div>
+            <div>
+                <div id="CreateRoomModePrev" class="buttonPrev opacity_button"></div>
+                <div id="CreateRoomModeNext" class="buttonNext opacity_button"></div>
+                <div id="CreateRoomMode" class="gameModeBoss blackShadow2"></div>
+            </div>
+        </section>
+
         <div id="CreateRoomModeIcon" class="iconMode1"></div>
         <div id="CreateRoomModeText"></div>
         <div id="dialogCreateRoomButtonCancel" class="buttonCancel"></div>
